@startuml
title Диаграмма классов АТД "Простой граф"

class Vertex {
  - name : string
  - data : int
  - nameSet : bool
  - dataSet : bool
  + Vertex()
  + setName(name : string)
  + setData(data : int)
  + getName() : string
  + getData() : int
}

class Edge {
  - v1 : Vertex
  - v2 : Vertex
  - weight : int
  - data : int
  - weightSet : bool
  - dataSet : bool
  + Edge(v1 : Vertex, v2 : Vertex)
  + Edge(v1 : Vertex, v2 : Vertex, weight : int)
  + setWeight(weight : int)
  + getWeight() : int
}

abstract class GraphForm {
  + {abstract} InsertV(index : int) : bool
  + {abstract} DeleteV(index : int) : bool
  + {abstract} InsertE(v1 : int, v2 : int, t : Edge) : bool
  + {abstract} DeleteE(v1 : int, v2 : int) : bool
  + {abstract} hasEdge(v1 : int, v2 : int) : bool
  + {abstract} getEdge(v1 : int, v2 : int) : Edge
}

class GraphMatrixForm {
  - directed : bool
  - matrix : vector
  + GraphMatrixForm(directed : bool)
  + InsertV(index : int) : bool
  + DeleteV(index : int) : bool
  + InsertE(v1 : int, v2 : int, t : Edge) : bool
  + DeleteE(v1 : int, v2 : int) : bool
  + hasEdge(v1 : int, v2 : int) : bool
  + getEdge(v1 : int, v2 : int) : Edge
}

class GraphListForm {
  - directed : bool
  - edgeList : vector
  + GraphListForm(directed : bool)
  + InsertV(index : int) : bool
  + DeleteV(index : int) : bool
  + InsertE(v1 : int, v2 : int, t : Edge) : bool
  + DeleteE(v1 : int, v2 : int) : bool
  + hasEdge(v1 : int, v2 : int) : bool
  + getEdge(v1 : int, v2 : int) : Edge
}

class Graph {
  - vertexVector : vector
  - data : GraphForm
  - directed : bool
  - dense : bool
  - edgeCounter : int
  + Graph()
  + Graph(vertexCount : int, directed : bool, dense : bool)
  + V() : int
  + E() : int
  + Directed() : bool
  + Dense() : bool
  + ToListGraph()
  + ToMatrixGraph()
  + InsertV() : Vertex
  + DeleteV(v : Vertex) : bool
  + InsertE(v1 : Vertex, v2 : Vertex) : bool
  + DeleteE(v1 : Vertex, v2 : Vertex) : bool
  + hasEdge(v1 : Vertex, v2 : Vertex) : bool
  + print_graph()
}

class VertexIterator {
  + begin() : bool
  + next() : bool
  + getValue() : Vertex
}

class EdgeIterator {
  + begin() : bool
  + next() : bool
  + getValue() : Edge
}

class OutputEdgeIterator {
  + begin() : bool
  + next() : bool
  + getValue() : Edge
}

class Euler {
  + DFS() : bool
}

class Bellman_ford {
  + bellman_ford() : string
  + centr() : string
}

GraphForm <|-- GraphMatrixForm
GraphForm <|-- GraphListForm

Graph *-- GraphForm
Graph *-- Vertex
Graph *-- Edge

GraphMatrixForm o-- Edge
GraphListForm o-- Edge
Edge o-- Vertex

Graph ..> VertexIterator
Graph ..> EdgeIterator
Graph ..> OutputEdgeIterator
Graph ..> Euler
Graph ..> Bellman_ford

note top of Graph : "Основной класс графа\nМатричное и списочное представление\nОриентированные/неориентированные графы"
note right of Bellman_ford : "Алгоритм Беллмана-Форда\n(центр орграфа)"
@enduml